# monorail

./: Cargo.toml  README.md  connect.py  test.py
libs/examples/actor-based-processing/src/: main.rs
libs/monorail/src/core/: topology.rs
libs/monorail/src/core/actor/: base.rs  manager.rs
libs/monorail/src/core/channels/: bridge.rs
libs/monorail/src/core/monolib/: actors.rs
libs/monorail/src/core/shard/: shard.rs  state.rs
src/: lib.rs  main.rs
src/core/: mod.rs  topology.rs
src/core/actor/: base.rs  id.rs  manager.rs  mod.rs  routing.rs
src/core/actor/lib/: hashmap.rs  slab.rs
src/core/channels/: bridge.rs  mod.rs  promise.rs
src/core/executor/: mail.rs  mod.rs  scheduler.rs
src/core/io/: fs.rs  mod.rs  net.rs  ring.rs
src/core/shard/: shard.rs  state.rs
src/core/task/: mod.rs  raw.rs
